--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,19 @@ services:
         - /etc/localtime:/etc/localtime:ro
         - ./dashboard.conf:/etc/nginx/conf.d/dashboard.conf
      container_name: redissyncer-dashboard
+
+  redissyncer-monitor:
+      image: jiashiwen/redissyncer-monitor:latest
+      #ports:
+      network_mode: "host"
+      mem_limit: 2g
+      environment:
+        SPRING_ENV: "--server.port=8088 "
+      volumes:
+        - /etc/localtime:/etc/localtime:ro
+      container_name: redissyncer-monitor
  
+
   redissyncer-server:
       image: jiashiwen/redissyncer:latest
       #ports:
@@ -19,9 +31,10 @@ services:
       mem_limit: 4g 
       environment:
         JAVA_TOOL_OPTIONS: " -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms4000m"
-        SPRING_ENV: "--server.port=8080 --syncer.config.path.logfile=/log --syncer.config.path.datafile=/data --syncer.config.auth=false "
+        SPRING_ENV: "--server.port=8080 --syncer.config.path.logfile=/log --syncer.config.path.datafile=/ --syncer.config.auth=false --spring.boot.admin.client.url=http://127.0.0.1:8088 "
       volumes:
         - /etc/localtime:/etc/localtime:ro
         - ./log:/log
+        - ./config:/config
         - ./data:/data
       container_name: redissyncer-server
