modify docker-compose for etcd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,8 @@ services:
         --server.storageType=etcd 
         --server.singleNode=true 
         --syncer.config.path.logfile=/log 
-        --syncer.config.auth=false "
+        --syncer.config.auth=false 
+        --etcd.endpoints='http://127.0.0.1:2379 "
       volumes:
         - /etc/localtime:/etc/localtime:ro
         - ./log:/log
