--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - ALLOW_NONE_AUTHENTICATION=yes
       - ETCD_ADVERTISE_CLIENT_URLS=http://127.0.0.1:2379
       volumes:
-      - ./etcd_data:/bitnami/etcd
+      - ./etcd_data:/bitnami/etcd/data
 
   redissyncer-server:
       image: jiashiwen/redissyncer:3.3.3
