--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,35 +3,15 @@
 version: "2.4"
 
 services:
-  redissyncer-dashboard:
-     image: jiashiwen/redissyncer-dashboard:v1.0
-     network_mode: "host"
-     volumes:
-        - /etc/localtime:/etc/localtime:ro
-        - ./dashboard.conf:/etc/nginx/conf.d/dashboard.conf
-     container_name: redissyncer-dashboard
-
-  redissyncer-monitor:
-      image: jiashiwen/redissyncer-monitor:latest
-      #ports:
-      network_mode: "host"
-      mem_limit: 2g
-      environment:
-        SPRING_ENV: "--server.port=8088 "
-      volumes:
-        - /etc/localtime:/etc/localtime:ro
-      container_name: redissyncer-monitor
- 
-
   redissyncer-server:
-      image: jiashiwen/redissyncer:latest
+      image: jiashiwen/redissyncer:3.3.3
       #ports:
       #- "8000:80"
       network_mode: "host"
       mem_limit: 4g 
       environment:
         JAVA_TOOL_OPTIONS: " -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms4000m"
-        SPRING_ENV: "--server.port=8080 --syncer.config.path.logfile=/log --syncer.config.path.datafile=/ --syncer.config.auth=true --management.endpoints.enabled-by-default=true --spring.boot.admin.client.url=http://127.0.0.1:8088 --spring.boot.admin.client.instance.service-url=http://127.0.0.1:8080 "
+        SPRING_ENV: "--server.port=8080 --syncer.config.path.logfile=/log --syncer.config.path.datafile=/ --syncer.config.auth=true --management.endpoints.enabled-by-default=true "
       volumes:
         - /etc/localtime:/etc/localtime:ro
         - ./log:/log
